--- a/yelp-hackathon-starter.ipynb
+++ b/yelp-hackathon-starter.ipynb
@@ -1,5 +1,14 @@
 {
  "metadata": {
+  "kernelspec": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "display_name": "IPython (Python 2)",
+   "language": "python",
+   "name": "python2"
+  },
   "name": "",
   "signature": "sha256:5e09b2e07a8f59d2a6ad0e1b351c47ba3d8a545491fbd97151c0702dee926329"
  },
@@ -43,10 +52,12 @@
      "source": [
       "### Getting Started\n",
       "\n",
-      "Clone the [mtldata/yelp-hackathon-starter](...) github repo which includes this ipython notebook.  \n",
+      "TODO: clone to mtldata  \n",
+      "Clone the [mtldata/yelp-data-explorer](...) github repo which includes this ipython notebook.  \n",
       "Download the [yelp academic dataset](http://www.yelp.ca/dataset_challenge/) used in this notebook.  \n",
       "\n",
-      "Alternatively, vsit the [mtldata/yelp-hackathon-starter]() project on domino to run the models without having to run or download anything locally. "
+      "TODO: set up domino project  \n",
+      "Alternatively, vsit the [mtldata/yelp-data-explorer](http://dominodatalab.com/mtldata/yelp-data-explorer) project on domino to run the models without having to run or download anything locally. "
      ]
     },
     {
@@ -54,12 +65,15 @@
      "collapsed": false,
      "input": [
       "# Use the handy json_to_csv_converter.py helper script from the \"yelp/dataset_examples\" repo\n",
+      "# Pro Tip: using the \"!\" at the begining of a line executes that line in bash instead of python\n",
+      "\n",
       "# ! python dataset-examples/json_to_csv_converter.py data/yelp_academic_dataset_business.json\n",
       "# ! python dataset-examples/json_to_csv_converter.py data/yelp_academic_dataset_checkin.json\n",
       "# ! python dataset-examples/json_to_csv_converter.py data/yelp_academic_dataset_review.json\n",
       "# ! python dataset-examples/json_to_csv_converter.py data/yelp_academic_dataset_tip.json\n",
       "# ! python dataset-examples/json_to_csv_converter.py data/yelp_academic_dataset_user.json\n",
-      "! ls data -l # Pro Tip: using the \"!\" at the begining of a line executes that line in bash instead of python"
+      "\n",
+      "! ls -l "
      ],
      "language": "python",
      "metadata": {},
@@ -68,31 +82,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "total 2677940\r\n",
-        "-rw-r--r-- 1 v v     145931 Jul 31 18:06 Dataset_Challenge_Academic_Dataset_Agreement.pdf\r\n",
-        "-rw-rw-r-- 1 v v   16564518 Jan 15 12:15 yelp_academic_dataset_business.csv\r\n",
-        "-rw-r--r-- 1 v v   37255693 Jul 30 14:59 yelp_academic_dataset_business.json\r\n",
-        "-rw-rw-r-- 1 v v    7589030 Jan 15 12:16 yelp_academic_dataset_checkin.csv\r\n",
-        "-rw-r--r-- 1 v v   15202400 Jul 30 14:59 yelp_academic_dataset_checkin.json\r\n",
-        "-rw-rw-r-- 1 v v  858666288 Jan 15 12:20 yelp_academic_dataset_review.csv\r\n",
-        "-rw-r--r-- 1 v v 1045754001 Jul 30 14:59 yelp_academic_dataset_review.json\r\n",
-        "-rw-rw-r-- 1 v v   49294433 Jan 15 11:12 yelp_academic_dataset_tip.csv\r\n",
-        "-rw-r--r-- 1 v v   79410890 Jul 30 14:59 yelp_academic_dataset_tip.json\r\n",
-        "-rw-rw-r-- 1 v v   69833342 Jan 15 11:14 yelp_academic_dataset_user.csv\r\n",
-        "-rw-r--r-- 1 v v  118779150 Jul 30 14:59 yelp_academic_dataset_user.json\r\n",
-        "-rw-r----- 1 v v  443440200 Jan 15 10:37 yelp_dataset_challenge_academic_dataset.tar\r\n",
-        "-rw-r--r-- 1 v v     219781 Jul 31 18:07 Yelp_Dataset_Challenge_Terms_round_4.pdf\r\n",
-        "-rw------- 1 v v       7006 Jan 15 11:18 yelp-hackathon-starter.ipynb\r\n"
+        "total 60\r\n",
+        "-rw-r--r-- 1 root root    21 Jan 15 20:33 README.md\r\n",
+        "drwxr-xr-x 6 root root  4096 Jan 15 20:33 dataset-examples\r\n",
+        "-rw-r--r-- 1 root root 51988 Jan 15 20:37 yelp-hackathon-starter.ipynb\r\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Uncomment the lines below as needed\n",
+      "# Uncomment lines below as needed\n",
       "\n",
       "# biz = pd.DataFrame.from_csv(\"data/yelp_academic_dataset_business.csv\")\n",
       "# checkins = pd.DataFrame.from_csv(\"data/yelp_academic_dataset_checkin.csv\")\n",
@@ -428,10 +431,22 @@
      "prompt_number": 80
     },
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Possible Questions to Answer   \n",
+      "(Please Add more ideas below! Questions to Answer or Visualize)"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# How long users have been yelpers\n"
+      "# How long have users have been yelpers?\n",
+      "# How many canadian businesses?\n",
+      "# How often does a user checkin to their favourite location?\n",
+      "# How can we find the best tips?"
      ],
      "language": "python",
      "metadata": {},
@@ -440,22 +455,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "int(round(1,-1))"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 61,
-       "text": [
-        "0"
-       ]
-      }
-     ],
-     "prompt_number": 61
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -497,6 +501,11 @@
       "2. Approximate neighborhood ranking based on yelp ratings/reviews -> correlated with walk score, etc\n",
       "2. "
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": []
     }
    ],
    "metadata": {}
